FELIX-4430 Provide bundles using exported packages along with the version at which the exports are imported
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/webconsole-plugins/packageadmin@1570134 13f79535-47bb-0310-9956-ffa450edef68

--- a/src/main/resources/res/plugin.html
+++ b/src/main/resources/res/plugin.html
@@ -28,6 +28,7 @@ var i18n = {
 			<th>${header.package.name}</th>
 			<th>${header.package.ver}</th>
 			<th>${header.exporting.bundle}</th>
+			<th>${header.importing.bundle}</th>
 			<th>${header.maven.deps}</th>
 		</tr>
 	</thead>
@@ -36,6 +37,7 @@ var i18n = {
 			<td class="pkg">&nbsp;</td>
 			<td class="ver">-</td>
 			<td class="bnd">${no.exporters.found}</td>
+			<td class="use">${no.uses.found}</td>
 			<td class="mvn">${no.maven.found}</td>
 		</tr>
 	</tbody>
